# ptcg-placeholder

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_GUIDE.md  USAGE_GUIDE.md  cliff.toml  main.py  pokemon-card-generator-linux.spec  pokemon-card-generator-macos-arm.spec  pokemon-card-generator-windows.spec  pyproject.toml
.github/: portfolio.json
.github/workflows/: build-release.yml  release.yml  test.yml
config/: constants.py  settings.py
src/: models.py
src/api/: image_downloader.py  pokemon_api.py
src/card/: card_designer.py  text_renderer.py
src/pdf/: page_layout.py  pdf_generator.py
src/ui/: input_validator.py  menu_system.py  welcome.py
src/utils/: cache_manager.py  error_handler.py  path_utils.py  type_icon_manager.py
tests/: test_card_designer.py  test_pdf_generator.py  test_utils.py
