[project]
name = "ptcg-placeholder"
version = "1.2.0"
description = "ðŸ“ Generate placeholder cards for Pokemon card collectors to organize their binders while collecting"
readme = "README.md"
authors = [
    { name = "jasonma1127", email = "jasonma1127@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["pokemon", "cards", "placeholder", "collection", "binder", "organizer", "ptcg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Utilities",
]
urls = { homepage = "https://github.com/jasonma1127/ptcg-placeholder", repository = "https://github.com/jasonma1127/ptcg-placeholder" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "reportlab>=4.0.4",
    "click>=8.1.7",
    "rich>=13.5.2",
    "pydantic>=2.4.0",
    "aiohttp>=3.8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ptcg-placeholder = "main:main"
ptcg = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
